// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/channel/ChannelList should match snapshot 1`] = `
<DataGrid
  columns={
    Array [
      Object {
        "field": "name",
        "fixed": true,
        "name": <FormattedMessage
          defaultMessage="Name"
          id="admin.channel_settings.channel_list.nameHeader"
          values={Object {}}
        />,
        "width": 3,
      },
      Object {
        "field": "team",
        "fixed": true,
        "name": <FormattedMessage
          defaultMessage="Team"
          id="admin.channel_settings.channel_list.teamHeader"
          values={Object {}}
        />,
        "width": 1.5,
      },
      Object {
        "field": "management",
        "fixed": true,
        "name": <FormattedMessage
          defaultMessage="Management"
          id="admin.channel_settings.channel_list.managementHeader"
          values={Object {}}
        />,
      },
      Object {
        "field": "edit",
        "fixed": true,
        "name": "",
        "textAlign": "right",
      },
    ]
  }
  endCount={1}
  loading={false}
  nextPage={[Function]}
  page={0}
  placeholderEmpty={
    <FormattedMessage
      defaultMessage="No channels found"
      id="admin.channel_settings.channel_list.no_channels_found"
      values={Object {}}
    />
  }
  previousPage={[Function]}
  rows={
    Array [
      Object {
        "edit": <span
          className="group-actions TeamList_editRow"
          data-testid="DNedit"
        >
          <Link
            to="/admin_console/user_management/channels/123"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.channel_settings.channel_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "123",
        "management": <span
          className="group-description adjusted row-content"
        >
          <FormattedMessage
            defaultMessage="Manual Invites"
            id="admin.channel_settings.channel_row.managementMethod.manual"
            values={Object {}}
          />
        </span>,
        "name": <span
          className="group-name overflow--ellipsis row-content"
          data-testid="channel-display-name"
        >
          <GlobeIcon
            className="channel-icon channel-icon__globe"
          />
          DN
        </span>,
        "team": <span
          className="group-description row-content"
        >
          teamDisplayName
        </span>,
      },
    ]
  }
  search={[Function]}
  startCount={1}
  term=""
  total={1}
/>
`;

exports[`admin_console/team_channel_settings/channel/ChannelList should match snapshot with paging 1`] = `
<DataGrid
  columns={
    Array [
      Object {
        "field": "name",
        "fixed": true,
        "name": <FormattedMessage
          defaultMessage="Name"
          id="admin.channel_settings.channel_list.nameHeader"
          values={Object {}}
        />,
        "width": 3,
      },
      Object {
        "field": "team",
        "fixed": true,
        "name": <FormattedMessage
          defaultMessage="Team"
          id="admin.channel_settings.channel_list.teamHeader"
          values={Object {}}
        />,
        "width": 1.5,
      },
      Object {
        "field": "management",
        "fixed": true,
        "name": <FormattedMessage
          defaultMessage="Management"
          id="admin.channel_settings.channel_list.managementHeader"
          values={Object {}}
        />,
      },
      Object {
        "field": "edit",
        "fixed": true,
        "name": "",
        "textAlign": "right",
      },
    ]
  }
  endCount={10}
  loading={false}
  nextPage={[Function]}
  page={0}
  placeholderEmpty={
    <FormattedMessage
      defaultMessage="No channels found"
      id="admin.channel_settings.channel_list.no_channels_found"
      values={Object {}}
    />
  }
  previousPage={[Function]}
  rows={
    Array [
      Object {
        "edit": <span
          className="group-actions TeamList_editRow"
          data-testid="DN0edit"
        >
          <Link
            to="/admin_console/user_management/channels/id0"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.channel_settings.channel_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id0",
        "management": <span
          className="group-description adjusted row-content"
        >
          <FormattedMessage
            defaultMessage="Manual Invites"
            id="admin.channel_settings.channel_row.managementMethod.manual"
            values={Object {}}
          />
        </span>,
        "name": <span
          className="group-name overflow--ellipsis row-content"
          data-testid="channel-display-name"
        >
          <GlobeIcon
            className="channel-icon channel-icon__globe"
          />
          DN0
        </span>,
        "team": <span
          className="group-description row-content"
        >
          teamDisplayName
        </span>,
      },
      Object {
        "edit": <span
          className="group-actions TeamList_editRow"
          data-testid="DN1edit"
        >
          <Link
            to="/admin_console/user_management/channels/id1"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.channel_settings.channel_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id1",
        "management": <span
          className="group-description adjusted row-content"
        >
          <FormattedMessage
            defaultMessage="Manual Invites"
            id="admin.channel_settings.channel_row.managementMethod.manual"
            values={Object {}}
          />
        </span>,
        "name": <span
          className="group-name overflow--ellipsis row-content"
          data-testid="channel-display-name"
        >
          <GlobeIcon
            className="channel-icon channel-icon__globe"
          />
          DN1
        </span>,
        "team": <span
          className="group-description row-content"
        >
          teamDisplayName
        </span>,
      },
      Object {
        "edit": <span
          className="group-actions TeamList_editRow"
          data-testid="DN2edit"
        >
          <Link
            to="/admin_console/user_management/channels/id2"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.channel_settings.channel_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id2",
        "management": <span
          className="group-description adjusted row-content"
        >
          <FormattedMessage
            defaultMessage="Manual Invites"
            id="admin.channel_settings.channel_row.managementMethod.manual"
            values={Object {}}
          />
        </span>,
        "name": <span
          className="group-name overflow--ellipsis row-content"
          data-testid="channel-display-name"
        >
          <GlobeIcon
            className="channel-icon channel-icon__globe"
          />
          DN2
        </span>,
        "team": <span
          className="group-description row-content"
        >
          teamDisplayName
        </span>,
      },
      Object {
        "edit": <span
          className="group-actions TeamList_editRow"
          data-testid="DN3edit"
        >
          <Link
            to="/admin_console/user_management/channels/id3"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.channel_settings.channel_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id3",
        "management": <span
          className="group-description adjusted row-content"
        >
          <FormattedMessage
            defaultMessage="Manual Invites"
            id="admin.channel_settings.channel_row.managementMethod.manual"
            values={Object {}}
          />
        </span>,
        "name": <span
          className="group-name overflow--ellipsis row-content"
          data-testid="channel-display-name"
        >
          <GlobeIcon
            className="channel-icon channel-icon__globe"
          />
          DN3
        </span>,
        "team": <span
          className="group-description row-content"
        >
          teamDisplayName
        </span>,
      },
      Object {
        "edit": <span
          className="group-actions TeamList_editRow"
          data-testid="DN4edit"
        >
          <Link
            to="/admin_console/user_management/channels/id4"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.channel_settings.channel_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id4",
        "management": <span
          className="group-description adjusted row-content"
        >
          <FormattedMessage
            defaultMessage="Manual Invites"
            id="admin.channel_settings.channel_row.managementMethod.manual"
            values={Object {}}
          />
        </span>,
        "name": <span
          className="group-name overflow--ellipsis row-content"
          data-testid="channel-display-name"
        >
          <GlobeIcon
            className="channel-icon channel-icon__globe"
          />
          DN4
        </span>,
        "team": <span
          className="group-description row-content"
        >
          teamDisplayName
        </span>,
      },
      Object {
        "edit": <span
          className="group-actions TeamList_editRow"
          data-testid="DN5edit"
        >
          <Link
            to="/admin_console/user_management/channels/id5"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.channel_settings.channel_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id5",
        "management": <span
          className="group-description adjusted row-content"
        >
          <FormattedMessage
            defaultMessage="Manual Invites"
            id="admin.channel_settings.channel_row.managementMethod.manual"
            values={Object {}}
          />
        </span>,
        "name": <span
          className="group-name overflow--ellipsis row-content"
          data-testid="channel-display-name"
        >
          <GlobeIcon
            className="channel-icon channel-icon__globe"
          />
          DN5
        </span>,
        "team": <span
          className="group-description row-content"
        >
          teamDisplayName
        </span>,
      },
      Object {
        "edit": <span
          className="group-actions TeamList_editRow"
          data-testid="DN6edit"
        >
          <Link
            to="/admin_console/user_management/channels/id6"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.channel_settings.channel_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id6",
        "management": <span
          className="group-description adjusted row-content"
        >
          <FormattedMessage
            defaultMessage="Manual Invites"
            id="admin.channel_settings.channel_row.managementMethod.manual"
            values={Object {}}
          />
        </span>,
        "name": <span
          className="group-name overflow--ellipsis row-content"
          data-testid="channel-display-name"
        >
          <GlobeIcon
            className="channel-icon channel-icon__globe"
          />
          DN6
        </span>,
        "team": <span
          className="group-description row-content"
        >
          teamDisplayName
        </span>,
      },
      Object {
        "edit": <span
          className="group-actions TeamList_editRow"
          data-testid="DN7edit"
        >
          <Link
            to="/admin_console/user_management/channels/id7"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.channel_settings.channel_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id7",
        "management": <span
          className="group-description adjusted row-content"
        >
          <FormattedMessage
            defaultMessage="Manual Invites"
            id="admin.channel_settings.channel_row.managementMethod.manual"
            values={Object {}}
          />
        </span>,
        "name": <span
          className="group-name overflow--ellipsis row-content"
          data-testid="channel-display-name"
        >
          <GlobeIcon
            className="channel-icon channel-icon__globe"
          />
          DN7
        </span>,
        "team": <span
          className="group-description row-content"
        >
          teamDisplayName
        </span>,
      },
      Object {
        "edit": <span
          className="group-actions TeamList_editRow"
          data-testid="DN8edit"
        >
          <Link
            to="/admin_console/user_management/channels/id8"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.channel_settings.channel_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id8",
        "management": <span
          className="group-description adjusted row-content"
        >
          <FormattedMessage
            defaultMessage="Manual Invites"
            id="admin.channel_settings.channel_row.managementMethod.manual"
            values={Object {}}
          />
        </span>,
        "name": <span
          className="group-name overflow--ellipsis row-content"
          data-testid="channel-display-name"
        >
          <GlobeIcon
            className="channel-icon channel-icon__globe"
          />
          DN8
        </span>,
        "team": <span
          className="group-description row-content"
        >
          teamDisplayName
        </span>,
      },
      Object {
        "edit": <span
          className="group-actions TeamList_editRow"
          data-testid="DN9edit"
        >
          <Link
            to="/admin_console/user_management/channels/id9"
          >
            <FormattedMessage
              defaultMessage="Edit"
              id="admin.channel_settings.channel_row.configure"
              values={Object {}}
            />
          </Link>
        </span>,
        "id": "id9",
        "management": <span
          className="group-description adjusted row-content"
        >
          <FormattedMessage
            defaultMessage="Manual Invites"
            id="admin.channel_settings.channel_row.managementMethod.manual"
            values={Object {}}
          />
        </span>,
        "name": <span
          className="group-name overflow--ellipsis row-content"
          data-testid="channel-display-name"
        >
          <GlobeIcon
            className="channel-icon channel-icon__globe"
          />
          DN9
        </span>,
        "team": <span
          className="group-description row-content"
        >
          teamDisplayName
        </span>,
      },
    ]
  }
  search={[Function]}
  startCount={1}
  term=""
  total={30}
/>
`;
